--- a/app/src/main/res/layout/view_feed_entry_with_image.xml
+++ b/app/src/main/res/layout/view_feed_entry_with_image.xml
@@ -13,7 +13,7 @@
         android:orientation="vertical"
         android:padding="@dimen/eight_dp">
 
-        <br.ufs.uolchallenge.WideImageView
+        <br.ufs.uolchallenge.util.WideImageView
             android:id="@+id/newsImage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
