Added full UI integration for news content

--- a/app/src/main/res/layout-land/view_feed_entry_with_image.xml
+++ b/app/src/main/res/layout-land/view_feed_entry_with_image.xml
@@ -13,7 +13,7 @@
         android:orientation="vertical"
         android:padding="@dimen/eight_dp">
 
-        <br.ufs.uolchallenge.util.WideImageView
+        <br.ufs.uolchallenge.widget.WideImageView
             android:id="@+id/newsImage"
             android:layout_width="280dp"
             android:layout_height="wrap_content"
