--- a/app/src/main/res/layout/activity_display_news.xml
+++ b/app/src/main/res/layout/activity_display_news.xml
@@ -4,6 +4,9 @@
     android:id="@+id/screenRoot"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
+    android:padding="@dimen/eight_dp"
+    android:clipToPadding="true"
     tools:context="br.ufs.uolchallenge.detail.NewsContentActivity">
 
     <WebView
