--- a/app/src/main/res/layout/view_feed_entry_with_image.xml
+++ b/app/src/main/res/layout/view_feed_entry_with_image.xml
@@ -4,7 +4,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:foreground="?attr/selectableItemBackground"
+    android:foreground="@drawable/fg_selectable_blue"
     android:layout_margin="@dimen/eight_dp">
 
     <LinearLayout
