--- a/app/src/main/res/layout-land/activity_home.xml
+++ b/app/src/main/res/layout-land/activity_home.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/screenRoot"
-    tools:context="br.ufs.uolchallenge.feed.HomeActivity">
+    tools:context=".features.feed.HomeActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/feedView"
